--- a/css/home.css
+++ b/css/home.css
@@ -150,7 +150,7 @@ section {
   justify-content: center;
   gap: 1rem;
   background: linear-gradient(rgba(128, 0, 128, 0.266), rgba(128, 0, 128, 0.5)),
-    url(images/heading.jpg) no-repeat;
+    url("images/heading.jpg") no-repeat;
   background-size: cover;
   background-position: center;
 
