--- a/css/home.css
+++ b/css/home.css
@@ -151,6 +151,7 @@ section {
   gap: 1rem;
   background: linear-gradient(rgba(128, 0, 128, 0.266), rgba(128, 0, 128, 0.5)),
     url("images/heading.jpg") no-repeat;
+    /*heading background img*/
   background-size: cover;
   background-position: center;
 
