--- a/css/shop.css
+++ b/css/shop.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #efc8ef;
+  background-color: #faf8fa;
   color: #333;
   line-height: 1.6;
 }
@@ -35,7 +35,7 @@ body {
 }
 
 .boxtype {
-  background: linear-gradient(180deg, #4c036b 32% ,#e19eee 100%);
+  background: linear-gradient(180deg, #f2e0f0 32% ,#e19eee 100%);
   border: 1px solid #464646;
   border-radius: 12px;
   padding: 20px;
@@ -58,7 +58,7 @@ body {
 .name {
   font-size: 20px;
   font-weight: 600;
-  color: rgb(243, 222, 239);
+  color: rgb(19, 18, 19);
   margin: 10px 0;
 }
 
